# OkShell

./: Cargo.toml  README.md  flake.nix  install.sh  package.nix
crates/okshell-auth/: Cargo.toml
crates/okshell-auth/src/: fingerprint.rs
crates/okshell-cache/: Cargo.toml
crates/okshell-cache/src/: hidden_apps.rs  lib.rs  pinned_apps.rs  wallpaper.rs
crates/okshell-clipboard/: Cargo.toml
crates/okshell-clipboard/src/: entry.rs  history.rs  lib.rs  thumbnail.rs  watcher.rs
crates/okshell-clut-gen/: Cargo.toml
crates/okshell-clut-gen/src/: main.rs
crates/okshell-core/: Cargo.toml
crates/okshell-core/src/: ipc.rs  lib.rs  monitors.rs  relm_app.rs
crates/okshell-frame/: Cargo.toml
crates/okshell-frame/src/: frame.rs  frame_draw_widget.rs  frame_spacer.rs  lib.rs
crates/okshell-frame/src/bars/: bar.rs
crates/okshell-frame/src/common_widgets/: big_button.rs  confirmation_dialog.rs  mod.rs  option_list.rs
crates/okshell-frame/src/menus/: builder.rs  menu.rs  mod.rs
crates/okshell-gamma/: Cargo.toml
crates/okshell-gamma/src/: lib.rs  ramp.rs  service.rs  wayland.rs
crates/okshell-idle/: Cargo.toml
crates/okshell-idle/src/: inhibitor.rs  lib.rs  wayland.rs
crates/okshell-image/: Cargo.toml
crates/okshell-image/src/: lut.rs
crates/okshell-lockscreen/: Cargo.toml
crates/okshell-lockscreen/src/: lock_screen.rs  lock_screen_manager.rs
crates/okshell-lockscreen/src/utils/: mod.rs  username.rs
crates/okshell-matugen/: Cargo.toml
crates/okshell-matugen/src/: css_mapping.rs  json_struct.rs  lib.rs  matugen.rs  static_theme_mapping.rs
crates/okshell-matugen/src/static_themes/: bauhaus.rs  black_turq.rs  bloodrust.rs  boo.rs  catppuccin_frappe.rs  catppuccin_latte.rs  catppuccin_macchiato.rs  catppuccin_mocha.rs  crimson_moonlight.rs  cyberpunk.rs  desert_power.rs  dracula.rs  eldritch.rs  ethereal.rs  everforest_dark_hard.rs  everforest_dark_medium.rs  everforest_dark_soft.rs  everforest_light_hard.rs  everforest_light_medium.rs  everforest_light_soft.rs  forest_stream.rs  gruvbox_dark_hard.rs  gruvbox_dark_medium.rs  gruvbox_dark_soft.rs  gruvbox_light_hard.rs  gruvbox_light_medium.rs  gruvbox_light_soft.rs  hackerman.rs  inky_pinky.rs  kanagawa_dragon.rs  kanagawa_lotus.rs  kanagawa_wave.rs  miasma.rs  mod.rs  monokai_classic.rs  nightfox.rs  nord_dark.rs  nord_light.rs  oceanic_next.rs  one_dark.rs  (+18 more)
crates/okshell-notification-popups/: Cargo.toml
crates/okshell-notification-popups/src/: lib.rs  popup_notifications.rs
crates/okshell-osd/: Cargo.toml
crates/okshell-osd/src/: brightness_osd.rs  lib.rs  sound_alerts.rs  volume_input_osd.rs  volume_osd.rs
crates/okshell-session/: Cargo.toml
crates/okshell-session/src/: lib.rs  session_lock.rs
crates/okshell-settings/: Cargo.toml
crates/okshell-settings/src/: general_settings.rs  lib.rs  notification_settings.rs  settings.rs  theme_settings.rs  wallpaper_settings.rs
crates/okshell-settings/src/bar_settings/: bar_settings.rs  bar_widget_factory.rs  bar_widget_section.rs  mod.rs  monitor_chip.rs
crates/okshell-settings/src/menu_settings/: container.rs  menu_settings.rs  menu_widget_list.rs  menu_widget_row.rs  mod.rs  quick_actions_list.rs  quick_actions_row.rs  spacer.rs
crates/okshell-settings/src/theme_settings/: mod.rs  theme_card.rs  theme_settings.rs
crates/okshell-style/: Cargo.toml  build.rs
crates/okshell-style/scss/01-tokens/: _colors.scss  _font.scss  _index.scss  _sizing.scss
crates/okshell-style/scss/03-primitives/: _buttons.scss  _calendar.scss  _dropdown.scss  _entries.scss  _index.scss  _menu_button.scss  _popover.scss  _progress_bar.scss  _spin.scss  _switch.scss  _tooltip.scss
crates/okshell-style/scss/04-components/: _bar_widget.scss  _calendar_menu.scss  _clipboard.scss  _dock.scss  _index.scss  _lock_screen.scss  _media_player.scss  _menu_divider.scss  _notification.scss  _revealer_button.scss  _revlealer_row.scss  _screen_recording.scss  _settings.scss  _wallpaper.scss  _weather.scss
crates/okshell-style/scss/05-surfaces/: _index.scss
crates/okshell-style/scss/06-windows/: _dialog_window.scss  _osd_window.scss  _polkit_window.scss  _settings_window.scss
crates/okshell-style/src/: lib.rs  style_manager.rs
crates/okshell-style/src/matugen/: css_mapping.rs  json_struct.rs  matugen.rs  mod.rs  static_theme_mapping.rs
crates/okshell-style/src/static_themes/: bloodrust.rs  catppuccin_frappe.rs  catppuccin_latte.rs  catppuccin_macchiato.rs  catppuccin_mocha.rs  cyberpunk.rs  desert_power.rs  dracula.rs  everforest_dark_hard.rs  everforest_dark_medium.rs  everforest_dark_soft.rs  everforest_light_hard.rs  everforest_light_medium.rs  everforest_light_soft.rs  gruvbox_dark_hard.rs  gruvbox_dark_medium.rs  gruvbox_dark_soft.rs  gruvbox_light_hard.rs  gruvbox_light_medium.rs  gruvbox_light_soft.rs  kanagawa_dragon.rs  kanagawa_lotus.rs  kanagawa_wave.rs  mod.rs  nord_dark.rs  nord_light.rs  oceanic_next.rs  one_dark.rs  poimandres.rs  rose_pine.rs  rose_pine_dawn.rs  rose_pine_moon.rs  seoul.rs  solarized_dark.rs  solarized_light.rs  synthwave_84.rs  tokyo_night.rs  tokyo_night_light.rs  tokyo_night_storm.rs  varda.rs
crates/okshell-style/src/user_css/: mod.rs  paths.rs  style.rs  style_utils.rs  user_style_manager.rs
crates/okshell-utils/: Cargo.toml
crates/okshell-utils/src/: app_icon.rs  app_info.rs  audio.rs  battery.rs  bluetooth.rs  brightness.rs  clear_box.rs  gtk.rs  hover_scroll.rs  hypr_picker.rs  hyprland.rs  idle.rs  key_mode.rs  launch.rs  lib.rs  logout.rs  media.rs  network.rs  notifications.rs  power_profile.rs  reboot.rs  scroll_extensions.rs  shutdown.rs  strings.rs  weather.rs
crates/okshell-utils/src/app_icon/: app_icon.rs  icon_index.rs  mod.rs
crates/okshell-wallpaper/: Cargo.toml
crates/okshell-wallpaper/src/: wallpaper.rs
okshell/: Cargo.toml  build.rs
okshell/src/: main.rs
okshellctl/: Cargo.toml
okshellctl/src/: app.rs  bus.rs  lib.rs  main.rs
okshellctl/src/subcommands/: audio.rs  bar.rs  brightness.rs  lock.rs  menu.rs  mod.rs  settings.rs
okshellshare/: Cargo.toml
okshellshare/src/: bus.rs  main.rs
(+187 files in other folders)
