[package]
name = "okshell-gamma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OkShell night light controls."
repository.workspace = true
license.workspace = true

[dependencies]
glib = "0.22.7"
anyhow.workspace = true
libc.workspace = true
tokio.workspace = true
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true