[package]
name = "okshell-idle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OkShell idle inhibitor."
repository.workspace = true
license.workspace = true

[dependencies]
gdk4-wayland.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
relm4.workspace = true
wayland-backend.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
zbus.workspace = true
