[package]
name = "okshell-image"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OkShell image manipulation."
repository.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
lutgen.workspace = true
okshell-config.workspace = true
tracing.workspace = true