[package]
name = "okshell-lockscreen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OkShell lock screen"
repository.workspace = true
license.workspace = true

[dependencies]
gtk4.workspace = true
gtk4-layer-shell.workspace = true
libc.workspace = true
okshell-auth.workspace = true
okshell-cache.workspace = true
okshell-common.workspace = true
okshell-config.workspace = true
okshell-session.workspace = true
pam.workspace = true
reactive_graph.workspace = true
relm4.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
