[package]
name = "okshell-osd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OkShell on screen displays"
repository.workspace = true
license.workspace = true

[dependencies]
gtk4.workspace = true
gtk4-layer-shell.workspace = true
okshell-common.workspace = true
okshell-services.workspace = true
okshell-sounds.workspace = true
okshell-utils.workspace = true
relm4.workspace = true
tokio.workspace = true
tracing.workspace = true
wayle-audio.workspace = true
wayle-battery.workspace = true
wayle-brightness.workspace = true
