[package]
name = "okshell-wallpaper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OkShell wallpaper"
repository.workspace = true
license.workspace = true

[dependencies]
gtk4.workspace = true
gtk4-layer-shell.workspace = true
okshell-cache.workspace = true
okshell-common.workspace = true
okshell-config.workspace = true
okshell-style.workspace = true
reactive_graph.workspace = true
relm4.workspace = true
tracing.workspace = true
